--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -67,7 +67,7 @@
     {% endblock %}
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ app.request.baseUrl }}/web/img/favicon.ico"/>
+    <link rel="shortcut icon" href="{{ app.request.baseUrl }}/web/favicon.ico"/>
 </head>
 <body>
 <header id="header">
