--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -40,8 +40,8 @@
     <meta charset="utf-8">
     <!-- Bootstrap -->
     <link href="{{ app.request.baseUrl }}/web/res/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="http://syonix.ch/res/fonts/flexo.css" rel="stylesheet" media="screen">
-    <link href="{{ app.request.baseUrl }}/web/res/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen">
+    <link href="http://cdn.syonix.ch/fonts/flexo/1.0/flexo.css" rel="stylesheet" media="screen">
+    <link href="http://cdn.syonix.ch/fonts/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="screen">
     <link href="{{ app.request.baseUrl }}/web/css/screen.css" rel="stylesheet" media="screen">
 
     <!-- Apple Touch Icons -->
